--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -142,6 +142,7 @@ hr{
     transition: 0.5s;
 }
 .button-view-my-work #littleArrow{
+	font-size: 12pt;
 	transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -168,7 +169,7 @@ hr{
     justify-content: center;
     align-items: center;
     background: #0E0B16;
-    border-bottom: 3px solid #A239CA;
+    border-bottom: 3px solid #4717F6;
 }
 #navi a{
 	color: white;
@@ -265,6 +266,9 @@ hr{
 	background-color: #4717F6;;
 	border-color: #4717F6;
 }
+#about .skills-Header{
+	color: white;
+}
 #skills .wrapper-container .container{
 	height: 5px;
 }
@@ -275,15 +279,12 @@ hr{
 .wrapper-container{
 	font-size: 12pt;
 	background-color: #A239CA;
-	border: 2px solid #0E0B16;
+	border: 1px solid #0E0B16;
 	width: 80%;
-}
-.wrapper-container {
-	color: white;
 }
 #about .wrapper-container p {
 	color: white;
-	background-color: #A239CA;
+	background-color: black;
 }
 div.wrapper-container p{
 	margin-bottom: 0px;
@@ -302,47 +303,47 @@ div.wrapper-container p{
 		  color: white;
 		}
 		.html {
-		width: 100%; background-color: white;
+		width: 100%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.css {
-		width: 100%; background-color: white;
+		width: 100%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.javascript {
-		width: 95%; background-color: white;
+		width: 95%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.jquery {
-		width: 80%; background-color: white;
+		width: 80%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.bootstrap {
-		width: 60%; background-color: white;
+		width: 60%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.json {
-		width: 60%; background-color: white;
+		width: 60%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.php {
-		width: 70%; background-color: white;
+		width: 70%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.sql {
-		width: 45%; background-color: white;
+		width: 45%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.java {
-		width: 90%; background-color: white;
+		width: 90%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.docker {
-		width: 75%; background-color: white;
+		width: 75%; background-color: #A239CA;
 		color: #1e797d;
 		}
 		.git {
-		width: 60%; background-color: white;
+		width: 60%; background-color: #A239CA;
 		color: #1e797d;
 		}
 /*** Projects | Portolio ***/
@@ -480,7 +481,7 @@ div.wrapper-container p{
 }
 @media screen and (min-width: 700px) {
 	body{
-		font-size: 1.2vw;
+		font-size: 1.1vw;
 	}
 	.container{
 		width: 90%;
@@ -675,7 +676,7 @@ div.wrapper-container p{
 		}
 		.connect h1{
 			transform:translate(0px);
-			transition: 1.8s ease;
+			transition: 0.8s ease;
 		}
 		.connect.hidden h1{
 			opacity: 0;
@@ -684,7 +685,7 @@ div.wrapper-container p{
 		.connect .connect-social-text1{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 1.8s;
+			transition-delay: 0.8s;
 		}
 		.connect.hidden .connect-social-text1{
 			opacity: 0;
@@ -693,7 +694,7 @@ div.wrapper-container p{
 		.connect .connect-social-buttons{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 2.6s;
+			transition-delay: 1.6s;
 		}
 		.connect.hidden .connect-social-buttons{
 			opacity: 0;
@@ -702,7 +703,7 @@ div.wrapper-container p{
 		.connect h3{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 3.4s;
+			transition-delay: 1.6s;
 		}
 		.connect.hidden h3{
 			opacity: 0;
@@ -711,7 +712,7 @@ div.wrapper-container p{
 		.connect .connect-social-text2{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 4.2s;
+			transition-delay: 2.4s;
 		}
 		.connect.hidden .connect-social-text2{
 			opacity: 0;
@@ -720,7 +721,7 @@ div.wrapper-container p{
 		.connect img{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 5.0s;
+			transition-delay: 3.2s;
 		}
 		.connect.hidden img{
 			opacity: 0;
@@ -729,7 +730,7 @@ div.wrapper-container p{
 		.connect .connect-social-text3{
 			transform:translate(0px);
 			transition: 0.8s ease;
-			transition-delay: 5.8s;
+			transition-delay: 4.0s;
 		}
 		.connect.hidden .connect-social-text3{
 			opacity: 0;
