change background again

--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -358,7 +358,7 @@ div.wrapper-container h1{
 	margin: 0;
 	padding: 0;
 	width: 100vw;
-	background-color: #ddd;
+	background-color: #eaeaea;
 	color: #1e797d;
 	padding-top: 15vh;
 	padding-bottom: 5vh;
