--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -320,6 +320,10 @@ div.wrapper-container h1{
 		width: 80%; background-color: #A239CA;
 		color: #1e797d;
 		}
+		.react {
+		width: 50%; background-color: #A239CA;
+		color: #1e797d;
+		}
 		.bootstrap {
 		width: 60%; background-color: #A239CA;
 		color: #1e797d;
