--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -362,7 +362,7 @@ div.wrapper-container h1{
 	margin: 0;
 	padding: 0;
 	width: 100vw;
-	background-color: #eaeaea;
+	background-color: #f5f5f5;
 	color: #1e797d;
 	padding-top: 15vh;
 	padding-bottom: 5vh;
