--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -559,6 +559,7 @@ div.wrapper-container h1{
     justify-content: space-around;
     }
     .modalContent{
+    min-width: 30%;
 	max-width: 30%;
 	margin: 0 auto;
 	}
