--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -25,6 +25,24 @@ hr{
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #4717F6; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #A239CA; 
+  }
 
 #about h1,#portfolio h1,#connect h1,#about h2,#portfolio h2,#connect h2,#about h3,#portfolio h3,#connect h3{
 	color: #A239CA;
@@ -310,9 +328,17 @@ hr{
 	border: 1px solid #0E0B16;
 	width: 80%;
 }
+#about .wrapper-container h1 {
+	text-align: center;
+}
+#about .wrapper-container h1 {
+    font-size: 1.5rem;
+    border-bottom: 3px solid #4717F6;
+}
 #about .wrapper-container p {
 	color: white;
 	background-color: black;
+	text-align: center;
 }
 div.wrapper-container p{
 	margin-bottom: 0px;
@@ -328,6 +354,7 @@ div.wrapper-container h1{
 }
 		/*** Skills ***/
 		.skills {
+			display: none;
 		  text-align: right;
 		  padding: 5px;
 		  height: 5px;
