--- a/assets/css/ccc.css
+++ b/assets/css/ccc.css
@@ -95,8 +95,17 @@ hr{
     justify-content: center;
     align-items: end;
 }
+#connect .content-Section{
+	margin: 0;
+}
 .responsive {
   width: 100%;
+  height: auto;
+}
+img.responsive {
+  width: 100%;
+  max-width: 200px;
+  min-width: 150px;
   height: auto;
 }
 .modal{
@@ -520,9 +529,9 @@ div.wrapper-container h1{
 		margin-left: auto;
 	}
 	.content-Section{
-		width: 90%;
+		width: 100%;
 		margin-left: 1%;
-		margin-right: 5%;
+		margin-right: 1%;
 		margin-top: 2%;
 		display: flex;
 		flex-direction: column;
