--- a/assets/Projects/QMFlix/app.css
+++ b/assets/Projects/QMFlix/app.css
@@ -1,6 +1,14 @@
 #loader{
 	display: none;
 }
+
+#videoSpace{
+   z-index: 999;
+   padding: 0%;
+   margin: 0%;
+}
+/* Enter and leave animations can use different */
+
 .bounce-enter-active {
 	animation: bounce-in .5s;
   }
@@ -19,7 +27,6 @@
 	}
   }
 
-/* Enter and leave animations can use different */
 /* durations and timing functions.              */
 .slide-fade-enter-active {
 	transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
@@ -76,6 +83,10 @@
 
 
 .img__description {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -86,24 +97,39 @@
 	visibility: hidden;
 	opacity: 0;
 	border-radius: 2%;
-	-webkit-box-shadow: 3px 3px 3px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-	-moz-box-shadow:    3px 3px 3px 3px #ccc;  /* Firefox 3.5 - 3.6 */
-	box-shadow:         inset 0px 0px 3px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-	box-shadow:         0px 0px 3px 3px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-	/* transition effect. not necessary */
+	-webkit-box-shadow: 3px 3px 3px 3px #ccc;  
+	-moz-box-shadow:    3px 3px 3px 3px #ccc;  
+	box-shadow:         inset 0px 0px 3px 3px #ccc;  
+	box-shadow:         0px 0px 3px 3px #ccc;  
 	transition: opacity .2s, visibility .2s;
   }
-  .img__description .featured__description{
-	font-size: 0.075rem;
+  
+/*  .boxTitle{
+     -webkit-transform: translate(-50%,-50%);
+     transform: translate(-50%,-50%);
+     position: absolute;
+     top: 15%;
+     left: 50%;
   }
   .img__description button{
+    -webkit-transform: translate(-50%,-50%);
+     transform: translate(-50%,-50%);
+     position: absolute;
+     bottom: 5%;
+     left: 50%;
+	background-color: white;
+	color: black;
+	border-radius: 2px;
+	border: 0;
+    outline: 0;
+} */
+.img__description button{
 	background-color: white;
 	color: black;
 	border-radius: 2px;
 	border: 0;
     outline: 0;
 }
-  
   .box a:hover  .img__description {
 	visibility: visible;
 	opacity: 1;
@@ -143,7 +169,7 @@
 	box-shadow: 0px 0px 20px 30px rgba(0,0,0,0.75);
 }
 .featured { 
-    height: 400px;
+    
     position: relative;
     background-size: cover;
     padding: 0 0 0 30px;
@@ -169,8 +195,6 @@
 
 
 .featured h2 {
-    font-size: 50px;
-	margin: 0;
 	z-index: 10;
 }
 
@@ -222,7 +246,7 @@
 }
 html, body {
 	width: 100vw;
-	min-height: 100vh;
+	min-height: 99vh;
 	max-width:100%;
 	margin: 0;
 	padding: 0;
@@ -251,10 +275,21 @@ header {
 	grid-gap: 5px;
 	grid-template-columns: 1fr 4fr 1fr;
 	grid-template-areas: "nt mn mn sb . . . ";
-	background-color: var(--halfdark);
+	/*background-color: var(--halfdark);*/
+    background-color: transparent;
+    transition: background 250ms ease-out;
 	width: 100%;
 	margin-bottom: 0px;
 	z-index: 20;
+}
+
+header.nav-scrolled{
+   background-color: var(--halfdark);
+   /*background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.9), rgba(0,0,0,0));*/
+}
+
+header h3{
+  font-size:2em;
 }
 .netflixLogo {
 	grid-area: nt;
@@ -304,16 +339,16 @@ header {
 .box {
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: repeat(6, minmax(100px, 1fr));
+	grid-template-columns: repeat(3, minmax(200px, 1fr));
 }
 .box a {
 	transition: transform 0.3s;
 }
 .box a:hover {
 	transition: transform 0.3s;
-	-ms-transform: scale(1.6);
-	-webkit-transform: scale(1.6);
-	transform: scale(1.6);
+	-ms-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 .box img {
 	border-radius: 2px;
@@ -409,7 +444,7 @@ footer {
 		grid-gap: 0px;
 		grid-template-columns: repeat(1, 1fr);
 		text-align: center;
-		display:none;
+        display:none;
    }
 	h1 {
 		text-align: center;
@@ -442,5 +477,3 @@ footer {
    }
    
 }
-
-
