--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,7 @@ h1,h2,h3{
 
 .headline{
     font-size: 7em;
-    margin-bottom: 0.05em;
+    margin-bottom: 0.15em;
     font-weight: 100;
     font-weight: bold;
     font-variant: small-caps;
@@ -329,7 +329,7 @@ h1,h2,h3{
 
 .home, .about, .skills, .projects{
     min-height: 100%;
-    height: 100%;
+    /* disable because of laptop format height: 100%; */
 }
 .contact{
     min-height: 90%;
