--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,9 @@
 *::after{
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 html, body, .contentPage {
     height: 100%;
   }
